--- a/src/index.css
+++ b/src/index.css
@@ -152,3 +152,14 @@ h1 {
   background-color: var(--main-bg-color);
   flex: 1 0 auto;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.4);
+}
